# tiago_metapkg_ros_control_sot

./: README.md
roscontrol_sot_tiago/: CMakeLists.txt  package.xml
roscontrol_sot_tiago/config/: pids_effort.yaml  pids_velocity.yaml  sot_params.yaml  sot_params_mobile_base.yaml  sot_tiago_controller.yaml  sot_tiago_params.yaml  sot_tiago_params_effort.yaml  sot_tiago_params_gazebo.yaml  sot_tiago_params_gazebo_effort.yaml  sot_tiago_params_gazebo_with_mobile_base.yaml  sot_tiago_params_with_mobile_base.yaml
roscontrol_sot_tiago/launch/: controller.launch  display_sot.launch  sot_tiago_controller.launch  sot_tiago_controller_effort.launch  sot_tiago_controller_gazebo.launch  sot_tiago_controller_gazebo_effort.launch
roscontrol_sot_tiago/scripts/: republish
sot_tiago_bringup/: CMakeLists.txt  README.md  package.xml
sot_tiago_bringup/launch/: geometric_simu.launch  geometric_simu_context.launch  sot_params.launch
sot_tiago_bringup/sot/: tiago.yaml
tiago_metapkg_ros_control_sot/: CMakeLists.txt  package.xml
