<package>
  <name>sot_tiago_bringup</name>
  <version>1.0.1</version>
  <description>ROS package for Stack of Tasks on Tiago</description>

  <maintainer email="ostasse@laas.fr">Olivier Stasse</maintainer>

  <license>BSD</license>

  <url type="website">http://redmine.laas.fr/</url>
  <author>Olivier Stasse</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tiago_description</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tiago_description</run_depend>

  <export>
  </export>
</package>
