<package>
  <name>tiago_metapkg_ros_control_sot</name>
  <version>1.0.0</version>
  <description>A set of packages that include sot-wrapper and tiago sot params .</description>

  <maintainer email="olivier.stasse@laas.fr">Olivier Stasse</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/stack-of-tasks/tiago_metapkg_roscontrol_sot</url>

  <author>Olivier Stasse</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>roscontrol_sot</run_depend>
  <run_depend>roscontrol_sot_tiago</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>control_toolbox</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
